crates/bonsaidb-macros/tests/ui/collection/invalid_attribute.stderr
error: Only `authority="some-authority"`, `name="some-name"`, `views(SomeView, AnotherView)` are supported attributes
 --> tests/ui/collection/invalid_attribute.rs:4:48
  |
4 | #[collection(name = "hi", authority = "hello", "hi")]
  |                                                ^^^^
